# mini-google-ads

./: .gitignore  CLAUDE.md  PLAN.md  README.md  docker-compose.yml  railway.json
backend/: .dockerignore  .env.example  Dockerfile  config.py  db.py  main.py  models.py  pyproject.toml  railway.json
backend/api/: advertisers.py  auction.py  explore.py  keywords.py  simulation.py
backend/auction/: ad_rank.py  engine.py  gsp.py  slot_allocation.py
backend/bidding/: features.py  pcvr_model.py  strategy.py
backend/matching/: broad.py  dispatcher.py  embedder.py  exact.py  phrase.py
backend/narration/: llm.py  template.py
backend/quality_score/: ad_relevance.py  aggregate.py  baseline.py  lp_experience.py  pctr.py  text_utils.py
backend/scripts/: embed_keywords.py  run_simulation.py  seed_advertisers.py  seed_users.py  train_bidding_model.py
backend/simulation/: behavior.py  runner.py
backend/tests/: test_auction.py  test_bidding.py  test_matching.py  test_narration.py  test_quality_score.py
backend/tracking/: events.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AdResult.tsx  AlgorithmSide.tsx  BusinessSide.tsx  ChapterNav.tsx  ControlPanel.tsx  Explainer.tsx  FlowDiagram.tsx  LiveLog.tsx  LiveStats.tsx  StatsRibbon.tsx  ThemeToggle.tsx  TypewriterText.tsx
frontend/components/canvas/: AdvertiserNode.tsx  AuctionPipelineSVG.tsx  PipelineCanvas.tsx  StageNode.tsx
frontend/components/chapters/: Chapter1Search.tsx  (+6 more)
frontend/lib/: api.ts
ideas/: 01-mini-google-ads.md
(+8 files in other folders)
