[project]
name = "mini-google-ads"
version = "0.1.0"
description = "A working from-scratch mini Google Ads stack: auction, Quality Score, Smart Bidding ML."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    "python-dotenv>=1.0",
    "numpy>=2.0",
    "scikit-learn>=1.5",
    "lightgbm>=4.5",
    "sentence-transformers>=3.0",
    "groq>=0.13",
    "httpx>=0.28",
    "pandas>=2.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.9"]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
